# Chess960RS

./: Cargo.toml  README.md
src/: main.rs  pieces.rs
