[package]
name = "chess_960"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
axum = "0.7"
axum-server = "0.7.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
# The async runtime (Axum is built on it)
tokio = { version = "1", features = ["full"] }
# For logging and tracing (optional, but highly recommended)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
